Bug 735940 - if filter target folder is moved, all subsequent filters got their targets set to this folder. r=Standard8